# autonpcs

./: .gitattributes  Cargo.toml  README.md  export.sh
assets/bht/u/: bt_429f8.bht.ron  bt_first_created_2.bht.yaml  spawn_fox.bht.ron  spawn_test.bht.ron  spawn_test_2.bht.ron  spawn_test_2.bht.yaml  timeout.bht.ron
assets/npc/Animation_rig/: 1.fbx
assets/npc/Backpack/: Backpack_003.fbx  Backpack_005.fbx  Backpack_009.fbx  Backpack_015.fbx  Backpack_016.fbx  Backpack_020.fbx  Backpack_024.fbx
assets/npc/Body/: Body_Blue_001.glb  Body_Blue_002.fbx  Body_Brown_003.fbx  Body_Orange_003.fbx  Body_Red_001.fbx  Body_Red_002.fbx  Body_White_001.fbx  Body_White_003.fbx
assets/npc/Eyebrow/: Eyebrow_002.fbx  Eyebrow_003.fbx  Eyebrow_007.fbx  Eyebrow_008.fbx  Eyebrow_011.fbx
assets/npc/Glasses/: Glasses_001.fbx  Glasses_002.fbx  Glasses_003.fbx  Glasses_005.fbx  Glasses_006.fbx  Glasses_007.fbx  Glasses_009.fbx  Glasses_010.fbx  Glasses_012.fbx  Glasses_013.fbx  Glasses_014.fbx  Glasses_018.fbx  Glasses_019.fbx  Glasses_020.fbx  Glasses_024.fbx  Glasses_025.fbx
assets/npc/Glove/: Glove_001.fbx  Glove_002.fbx  Glove_003.fbx  Glove_007.fbx  Glove_009.fbx  Glove_010.fbx  Glove_011.fbx  Glove_012.fbx  Glove_016.fbx  Glove_018.fbx  Glove_020.fbx
assets/npc/Hair/: Hair_001.fbx  Hair_001.glb  Hair_002.fbx  Hair_004.fbx  Hair_009.fbx  Hair_012.fbx  Hair_014.fbx  Hair_015.fbx  Hair_018.fbx  Hair_021.fbx  Hair_023.fbx  Hair_025.fbx  Hair_026.fbx  Hair_027.fbx
assets/npc/Hat/: Hat_002.fbx  Hat_003.fbx  Hat_006.fbx  Hat_008.fbx  (+51 more)
src/: main.rs
src/behaviors/: bioma.rs  mod.rs
(+412 files in other folders)
